完成测试集和训练集
