# swagger/swagger.json
@@ -15,25 +15,131 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/status/": {
+            "get": {
+                "tags": [
+                    "status"
+                ],
+                "description": "获取当前登录状态（即验证 token）",
+                "responses": {
+                    "200": {
+                        "description": "登录成功"
+                    },
+                    "400": {
+                        "description": "客户端传入参数错误"
+                    },
+                    "500": {
+                        "description": "创建失败"
+                    }
+                }
+            }
+        },
+        "/status/login": {
+            "post": {
+                "tags": [
+                    "status"
+                ],
+                "description": "登陆系统，校验密码，返回 token，注，需要传入一个 json 字符串",
+                "responses": {
+                    "200": {
+                        "description": "登录成功"
+                    },
+                    "400": {
+                        "description": "客户端传入参数错误"
+                    },
+                    "500": {
+                        "description": "创建失败"
+                    }
+                }
+            }
+        },
+        "/status/logout": {
+            "post": {
+                "tags": [
+                    "status"
+                ],
+                "description": "登出系统，清除 token 对应的账户信息，注，需要传入一个 json 字符串",
+                "responses": {
+                    "200": {
+                        "description": "登出成功"
+                    },
+                    "400": {
+                        "description": "客户端传入参数错误"
+                    },
+                    "500": {
+                        "description": "创建失败"
+                    }
+                }
+            }
+        },
         "/testsets/": {
+            "get": {
+                "tags": [
+                    "testsets"
+                ],
+                "description": "获取训练集列表",
+                "responses": {
+                    "200": {
+                        "description": "获取成功"
+                    },
+                    "500": {
+                        "description": "服务器错误"
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "testsets"
                 ],
-                "description": "创建一个测试集",
-                "operationId": "TestsetController.Create a new test set",
+                "description": "创建一个新的测试集，注，需要传入一个 json 字符串，自带的命令无法实现",
+                "responses": {
+                    "200": {
+                        "description": "创建测试集成功"
+                    },
+                    "400": {
+                        "description": "客户端传入参数错误"
+                    },
+                    "500": {
+                        "description": "创建失败"
+                    }
+                }
+            }
+        },
+        "/testsets/{id}": {
+            "get": {
+                "tags": [
+                    "testsets"
+                ],
+                "description": "根据ID获取训练集",
                 "parameters": [
                     {
-                        "in": "formData",
-                        "name": "name",
-                        "description": "test set name",
+                        "in": "path",
+                        "name": "id",
+                        "description": "对应 ID",
                         "required": true,
-                        "type": "string"
+                        "type": "integer",
+                        "format": "int64"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "创建新测试集成功"
+                        "description": "获取图书馆组成功"
+                    },
+                    "500": {
+                        "description": "服务器错误"
+                    }
+                }
+            }
+        },
+        "/testsets/{id}/delete": {
+            "post": {
+                "tags": [
+                    "testsets"
+                ],
+                "description": "删除指定训练集",
+                "responses": {
+                    "200": {
+                        "description": "删除成功"
                     },
                     "500": {
                         "description": "服务器错误"
@@ -42,24 +148,73 @@
             }
         },
         "/trainsets/": {
+            "get": {
+                "tags": [
+                    "trainsets"
+                ],
+                "description": "获取训练集列表",
+                "responses": {
+                    "200": {
+                        "description": "获取成功"
+                    },
+                    "500": {
+                        "description": "服务器错误"
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "trainsets"
                 ],
-                "description": "创建一个训练集",
-                "operationId": "TrainsetController.Create a new train set",
+                "description": "创建一个新的训练集，注，需要传入一个 json 字符串，自带的命令无法实现",
+                "responses": {
+                    "200": {
+                        "description": "创建训练集成功"
+                    },
+                    "400": {
+                        "description": "客户端传入参数错误"
+                    },
+                    "500": {
+                        "description": "创建失败"
+                    }
+                }
+            }
+        },
+        "/trainsets/{id}": {
+            "get": {
+                "tags": [
+                    "trainsets"
+                ],
+                "description": "根据ID获取训练集",
                 "parameters": [
                     {
-                        "in": "formData",
-                        "name": "name",
-                        "description": "train set name",
+                        "in": "path",
+                        "name": "id",
+                        "description": "对应 ID",
                         "required": true,
-                        "type": "string"
+                        "type": "integer",
+                        "format": "int64"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "创建新训练集成功"
+                        "description": "获取图书馆组成功"
+                    },
+                    "500": {
+                        "description": "服务器错误"
+                    }
+                }
+            }
+        },
+        "/trainsets/{id}/delete": {
+            "post": {
+                "tags": [
+                    "trainsets"
+                ],
+                "description": "删除指定训练集",
+                "responses": {
+                    "200": {
+                        "description": "删除成功"
                     },
                     "500": {
                         "description": "服务器错误"
@@ -67,5 +222,11 @@
                 }
             }
         }
-    }
+    },
+    "tags": [
+        {
+            "name": "status",
+            "description": "状态控制 API\n"
+        }
+    ]
 }
